--- a/shootingstar/shooting start.css
+++ b/shootingstar/shooting start.css
@@ -31,10 +31,14 @@ body {
 @keyframes shooting {
     0% {
         transform: translateX(0) translateY(0) scale(1);
+        opacity: 0;
+    }
+    50% {
         opacity: 1;
     }
     100% {
         transform: translateX(-200px) translateY(200px) scale(0.2);
+        transform: translateX(-25px) translateY(200px) scale(0.2);
         opacity: 0;
     }
 }
