--- a/my blog/style.css
+++ b/my blog/style.css
@@ -1,29 +1,62 @@
-
 * {
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-.body{
-  margin: 0px;
-  padding: 0px;
+body {
   font-family: 'Open Sans', sans-serif;
 }
 
-.wrapper{
-  width: 1100;
+.wrapper {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #1E201E;
+  display: flex;
+  justify-content: space-between;
+  align-items: top;
   margin: auto;
   position: relative;
 }
 
-.logo img{
-    width: 50px;
-    height: 50px;
-    margin-left: 30px;
-    margin-top: 15px;
+.logo img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  vertical-align: middle;
 }
 
-.logo {
-  font-size: 30px;
+.logo a {
+  font-size: 24px;
+  color: aliceblue;
+  font-family: "Inter", sans-serif;
+  vertical-align: middle;
+  text-decoration: none;
 }
+
+.menu {
+  display: flex;
+  position: sticky;
+}
+
+.menu ul {
+  list-style: none;
+  display: flex;
+  gap: 20px; /* Tambahkan spasi antar item menu */
+}
+
+.menu ul li {
+  display: inline-block;
+}
+
+.menu ul li a {
+  color: white;
+  font-size: 16px;
+  padding: 0px 16px 0px 16px;
+}
+
+.menu ul li a:hover {
+  text-decoration: underline;
+}
+
